# jvm-study

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README_en.md
docs/: CONTRIBUTING.md
src/autorun/jdk/lang/reflect/: Reflect.md
src/autorun/jdk/tools/: HSDB.md  JINFO.md  JMAP.md  JPS.md  JSTACK.md
src/autorun/jvm/: JVMTI.md
src/autorun/jvm/bytecode/: BYTE_CODE.md
src/autorun/jvm/catalog/: back.md  catalog.md
src/autorun/jvm/classfile/: Classfile_Parser.md
src/autorun/jvm/enviment/: ENVIMENT_INIT.md  IDE_DEBUG.md
src/autorun/jvm/jit/: JIT1.md
src/autorun/jvm/jni/: HelloJni.cpp  HelloJni.h  JNIEnvAPI.md  JNI_INIT.md  README.md  build_jni.sh
src/autorun/jvm/jni/base/: jni_md.h
src/autorun/jvm/jvmti/: JVMTI.md  README.md
src/autorun/jvm/jvmti/methodCalledCount/: methodCalledCount.cpp
src/autorun/jvm/mem_pool/: MEMORY_POOL_INIT.md
src/autorun/jvm/method/: CALL_STUB.md  JAVA_CALLS.md
src/autorun/jvm/oop/: Compressed_Oops.md  Klass.md  Memory_Weave.md  OOP.md
src/autorun/jvm/start/: README.md  README2.md  README3.md  README4.md
src/autorun/jvm/thread/: SAFEPOINT.md  THREAD.md  VIRTUAL_THREAD_DESIGN.md
src/autorun/other/tools/: GDB.md  NM.md  TOP.md
test/autorun/jvm/jni/: HelloJni.java  HelloJniTest.java
